stylesheet.css
@font-face {
	font-family: 'Lato';
	src: url(fonts/Lato-Regular.ttf);
}

@font-face {
	font-family: 'Lato';
	src: url(fonts/Lato-Bold.ttf);
	font-weight: bold;
}

@font-face {
	font-family: 'Lato';
	src: url(fonts/Lato-Light.ttf);
	font-weight: lighter;
}

@font-face {
	font-family: 'Lato';
	src: url(fonts/Lato-Hairline.ttf);
	font-weight: thin;
}

* {
	box-sizing: border-box;
	font-family: 'Lato', sans-serif;
}

a {
	color: grey;
	text-decoration: none;
}

a:active {
	color: black;
}

a:hover {
	color: black;
}

a.focus {
	color: black;
}

img {
	overflow: auto;
}

col {
	overflow: auto;
}

h1 {
	font-weight: thin;
}

h3 {
	text-transform: uppercase;
	font-size: .8rem;
}

div {
	margin: auto;

}

input {
	display: inline-block;
	margin-bottom: 10px;
	width: 100%;
	padding: 5px 10px;
}

textarea {
	width: 100%;
    height: 150px;
    padding: 5px 10px;
    background-color: #f8f8f8;
    resize: none;
}

.heading {
	font-size: 150%;
	font-weight: thin;
	text-transform: uppercase;
	text-align:center;
	margin: auto;
}

.navbar {
	position: sticky;
	top: 0;
	background-color: white;
	display: block;
	margin: auto;
	text-align: center;
	text-transform: uppercase;
	position: sticky;
	top: 0;
	z-index: 9999;
}

.navbar ul {
	margin: auto;
	list-style-type: none;
    margin: 0;
    padding: 0;
}

.navbar ul li {	
	width: 100px;
	display: inline-block;
	padding: 8px;
}

.hero {
	z-index: 0;
}

.heroimage {
	z-index: 0;
	position: sticky;
	top: 0;
	margin: auto;
	overflow: hidden;
	height: 75vh;
}

.heroimage3 {
	position: relative;
	margin: auto;
	overflow: hidden;
	max-height: 300px
}

.textright {
	position: absolute;
	bottom: 12px;
    right: 20px;
    color: white;
}

.textoverlay {
	text-transform: uppercase;
	color: white;
	font-size: 3rem;
	position: absolute;
	top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hero2 {
	text-align: center;
	height: 30vh;
	margin: auto;
	padding: 3em;
	overflow: auto;
}

.heroimage2 {
	margin: auto;
	overflow: hidden;
}

.about {
	max-width: 70vw;
	margin: auto;
	padding: 3em;
	text-align: center;
}

.recent {
	max-width: 70vw;
	margin: auto;
	padding: 3em;
	text-align: center;
}

.contact {
	text-align: left;
	width: 40vw;
	max-width: 70vw;
	margin: auto;
	padding: 3em;
}

.contact2 {
	text-align: center;
	margin: auto;
	padding: 3em;
	background-image: url("images/i10.jpg");
	color: white;
}

.contactform {
	max-width: 50vw;
	margin: auto;
	padding: 50px 0px;
}

.wide {
	padding: 2em;
	display: inline-block;
    width: 40vw;
    text-align: left;
}

.narrow {
	padding: 2em;
	display: inline-block;
	width: 20vw;
	text-align: left;
}

.prof {
	width: 10vw;
}

.section {
	background-color: #ffffff;
	padding-top: 2em;
	padding-bottom: 3em;
	margin: auto;
}

.section2 {
	background-color: #f2f2f2;
	padding-top: 2em;
	padding-bottom: 3em;
}

.row {
	margin: auto;
	text-align: center;
}

.merch {
	text-align: center;
	margin: auto;

}

.row ul {

	text-align: center;
	margin: auto;
	list-style-type: none;
    margin: 0;
    padding: 0;
}

.merch ul {
	margin: auto;
	list-style-type: none;
    margin: 0;
    padding: 0;
}


.row ul li {
	display: inline-block;
	padding: 0px;
}

.merch ul li {
	display: inline-block;
	padding: 0px;
}

.form {
	text-align: left;
}

.lightbox {
	display: none;
	position: fixed;
	z-index: 999;
	width: 100%;
	height: 100%;
	text-align: center;
	top: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
}

.lightbox img {
	max-width: 90%;
	max-height: 90%;
	margin-top: 2%;
}


.lightbox:target {
	outline: none;
	display: block;
}

.thumbnail img {
	-webkit-filter: brightness(80%);
	filter: brightness(80%);
	-webkit-transition: all 1s ease;
    transition: all 1s ease;
}
 
.thumbnail img:hover {
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  box-shadow: 1px 4px 8px rgba(0,0,0,0.5);
}

.button {
	display: inline-block;
	padding: 10px 30px;
	text-align: center;
	margin: 10px 0px;
	color: white;
	border: 0px solid;
	background-color: black;
	-webkit-transition: all 1s ease;
    transition: all 1s ease;
}

.button:hover {
	color: white;
	background-color: #666666;
}

.resume {
	text-align: left;
}

.resume ul li {
	width: 350px;
	text-align: left;
}

.resume ul li h4 {
	padding-right: 3em;
	text-align: right;
}

